# citro-2d

./: Cargo.toml  Readme.md
citro-2d-sys/: Cargo.toml  build.rs
citro-2d-sys/src/: gx.rs
examples/: .gitignore  compile_assets.py  hello_spritesheet.rs
examples/gfx/: image.t3s
src/: color.rs  lib.rs  render_target.rs  spritesheet.rs
